# piki

./: AUTOSAVE.md  CHANGELOG.md  Cargo.toml  PLUGIN_SYSTEM.md  README.md  TESTING.md  TEXTDISPLAY_IMPLEMENTATION.md  frontpage.md  test-selection.md  test-structured.md
.github/workflows/: actions.yml  lint.yml  tests.yml
assets/: piki.icns
assets/macos/: Info.plist
cli/: Cargo.toml  README.md
cli/src/: main.rs  pager.rs
core/: Cargo.toml  README.md
core/example-wiki/: example-note.md  features.md  frontpage.md  meeting-minutes.md  tools.md
core/example-wiki/books/: atomic-habits-notes.md
core/example-wiki/family/: meal-planning.md  vacation-planning.md
core/example-wiki/personal/: marathon-training.md
core/example-wiki/recipes/: quick-dinners.md
core/example-wiki/sports/: injury-prevention.md  training-log.md
core/example-wiki/tech/: rust-learning-path.md
core/example-wiki/work/: api-documentation-update.md  auth-refactor.md  onboarding-resources.md  performance-optimization.md  q4-budget-analysis.md  team-standup-notes.md
core/src/: document.rs  lib.rs  plugin.rs  search.rs
example-wiki/: INDEX.md  about.md  example-page.md  features.md  frontpage.md  help.md
examples/: README.md  test_selection.rs  viewmd.rs  viewmd_structured.rs  viewtxt.rs  viewtxt_styled.rs
gui/: Cargo.toml  README.md  READONLY_IMPLEMENTATION.md
gui/assets/macos/: Info.plist
gui/examples/: on_air_preview.rs  viewmd.rs
gui/scripts/: bundle-macos.sh  gen-icons.sh
gui/src/: accents_menu.rs  app_icon.rs  app_url.rs  autosave.rs  clipboard.rs  content.rs  context_menu.rs  fltk_draw_context.rs  fltk_structured_rich_display.rs  history.rs  lib.rs  link_editor.rs  link_handler.rs  live_share.rs  main.rs  markdown_converter.rs  markdown_editor.rs  menu.rs  note_picker.rs  note_ui.rs  on_air_bar.rs  page_picker.rs  page_ui.rs  position_memory.rs  recency.rs  responsive_scrollbar.rs  rtf.rs  scroll_memory.rs  search_bar.rs  section_link.rs  settings.rs  statusbar.rs  theme.rs  ui_adapters.rs  window_state.rs
gui/src/richtext/: markdown_converter.rs  structured_document.rs  structured_editor.rs  structured_rich_display.rs  tdoc_bridge.rs
gui/tests/: live_share_server.rs
gui/tests/snapshots/: structured_rich_display_snapshots__richtext_basic_render.snap  structured_rich_display_snapshots__table_force_wrap_long_tokens.snap
scripts/: bundle-macos.sh  gen-icons.sh
src/: autosave.rs  content.rs  context_menu.rs  document.rs  editor.rs  fltk_draw_context.rs  fltk_rich_text_display.rs  fltk_structured_rich_display.rs  fltk_text_display.rs  history.rs  lib.rs  link_editor.rs  link_handler.rs  main.rs  markdown_editor.rs  menu.rs  page_picker.rs  page_ui.rs  plugin.rs  responsive_scrollbar.rs  rich_text_display.rs  statusbar.rs  text_display.rs  ui_adapters.rs  window_state.rs
src/sourceedit/: mod.rs  text_buffer.rs  text_display.rs
test-wiki/: existing.md  index.md
test-wiki/project-a/: overview.md  standup.md
tests/: text_display_snapshots.rs
tests/snapshots/: text_display_snapshots__alternating_styles.snap  text_display_snapshots__empty_lines.snap  text_display_snapshots__long_lines.snap  text_display_snapshots__markdown_code_block.snap  text_display_snapshots__markdown_emphasis.snap  text_display_snapshots__markdown_header.snap  text_display_snapshots__markdown_mixed_styles.snap  text_display_snapshots__multiline_styled_text.snap  text_display_snapshots__plain_text_rendering.snap  text_display_snapshots__simple_markdown_document.snap  text_display_snapshots__style_with_background_colors.snap  text_display_snapshots__tab_characters.snap  text_display_snapshots__underlined_text.snap
