[package]
name = "piki"
description = "A simple personal wiki application"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
piki-core = { version= "0.1.1", path = "../core" }
tdoc = { version = "0.4.0" }
fuzzypicker = "0.2.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
ratatui = "0.29"
crossterm = "0.28"

