[package]
name = "piki-gui"
description = "FLTK-based GUI for Piki personal wiki application"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
piki-core = { version = "0.2.0", path = "../core" }
fltk = { version = "1.5.20", features = ["use-wayland"] }
fltk-sys = "1.5.20"
pulldown-cmark = "0.13.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
regex = "1.10"
directories = "6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
unicode-segmentation = "1.10"
chrono = "0.4.42"
arboard = "3.4"
tdoc = { version="0.11.0", default-features=false }
rtf-parser = "0.4"
webbrowser = { version = "1.2.1", features = ["disable-wsl"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",
    "NSData",
    "NSDictionary",
    "NSURL",
    "NSAttributedString",
    "NSBundle",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "objc2-core-foundation", # CGFloat, used by e.g. NSFont::systemFontOfSize
    "NSApplication",
    "NSResponder",           # superclass of NSApplication
    "NSMenu",
    "NSMenuItem",
    "NSImage",
    "NSFont",
    "NSColor",
    "NSParagraphStyle",
    "NSAttributedString",
    "NSText",
    "NSPasteboard",
    "NSPasteboardItem",
] }

[dev-dependencies]
insta = "1.34"
rusttype = "0.9"
