[package]
name = "piki-gui"
description = "FLTK-based GUI for Piki personal wiki application"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# Build/bundling assets that aren't compiled into the crate. icon.svg and
# icon-512.png are intentionally NOT excluded — they are embedded via
# include_str!/include_bytes! and must ship in the published crate.
exclude = [
    "assets/piki.icns",
    "assets/logo.svg",
    "assets/macos",
    "scripts",
]

[dependencies]
piki-core = { version = "0.4.0", path = "../core" }
rutle = "0.3.0"
fltk = { version = "1.5.20", features = ["use-wayland"] }
fltk-sys = "1.5.20"
pulldown-cmark = "0.13.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
regex = "1.10"
directories = "6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
unicode-segmentation = "1.10"
chrono = "0.4.42"
arboard = "3.4"
tdoc = { version="0.11.0", default-features=false }
rtf-parser = "0.4"
webbrowser = { version = "1.2.1", features = ["disable-wsl"] }
tiny_http = "0.12.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",
    "NSData",
    "NSDictionary",
    "NSURL",
    "NSAttributedString",
    "NSBundle",
    # Receiving `piki://` URLs via the GetURL Apple Event (see app_url.rs). Only
    # the generated types are needed here; the event-manager methods are sent
    # with `msg_send!`, so the (heavier) `objc2-core-services` feature that gates
    # the generated method bindings is deliberately not enabled.
    "NSAppleEventManager",
    "NSAppleEventDescriptor",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "objc2-core-foundation", # CGFloat, used by e.g. NSFont::systemFontOfSize
    "NSApplication",
    "NSResponder",           # superclass of NSApplication
    "NSMenu",
    "NSMenuItem",
    "NSImage",
    "NSFont",
    "NSColor",
    "NSParagraphStyle",
    "NSAttributedString",
    "NSText",
    "NSPasteboard",
    "NSPasteboardItem",
] }
